--- a/src/components/SideBarFooter.astro
+++ b/src/components/SideBarFooter.astro
@@ -4,27 +4,8 @@
 </div>
 
 <div class="social-icons px-4 pb-5 pt-1 flex self-center justify-center sticky bottom-0 bg-base-200">
-    <a
-        href="https://manuelernestog.github.io/support-my-work/"
-        target="_blank"
-        class="mx-3"
-        aria-label="Support my work"
-        title="Support my work"
-    >
-        <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            style="fill: currentColor;transform: ;msFilter:;"
-            ><path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M5 2h2v3H5zm4 0h2v3H9zm4 0h2v3h-2zm6 7h-2V7H3v11c0 1.654 1.346 3 3 3h8c1.654 0 3-1.346 3-3h2c1.103 0 2-.897 2-2v-5c0-1.103-.897-2-2-2zm-4 9a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V9h10v9zm2-2v-5h2l.002 5H17z"
-            ></path></svg
-        >
-    </a>
-    <a href="https://github.com/manuelernestog" target="_blank" class="mx-3" aria-label="Github" title="Github">
+    
+    <a href="https://github.com/Migue98" target="_blank" class="mx-3" aria-label="Github" title="Github">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -38,20 +19,22 @@
             ></path>
         </svg>
     </a>
-    <a href="https://twitter.com/manuelernestog" target="_blank" class="mx-3" aria-label="Twitter" title="Twitter">
-        <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            style="fill: currentColor;transform: ;msFilter:;"
-            ><path
-                d="M19.633 7.997c.013.175.013.349.013.523 0 5.325-4.053 11.461-11.46 11.461-2.282 0-4.402-.661-6.186-1.809.324.037.636.05.973.05a8.07 8.07 0 0 0 5.001-1.721 4.036 4.036 0 0 1-3.767-2.793c.249.037.499.062.761.062.361 0 .724-.05 1.061-.137a4.027 4.027 0 0 1-3.23-3.953v-.05c.537.299 1.16.486 1.82.511a4.022 4.022 0 0 1-1.796-3.354c0-.748.199-1.434.548-2.032a11.457 11.457 0 0 0 8.306 4.215c-.062-.3-.1-.611-.1-.923a4.026 4.026 0 0 1 4.028-4.028c1.16 0 2.207.486 2.943 1.272a7.957 7.957 0 0 0 2.556-.973 4.02 4.02 0 0 1-1.771 2.22 8.073 8.073 0 0 0 2.319-.624 8.645 8.645 0 0 1-2.019 2.083z"
-            ></path>
+    <a href="https://www.facebook.com/migueAlBaSi98" target="_blank" class="mx-3" aria-label="Twitter" title="Twitter">
+        <svg 
+            xmlns="http://www.w3.org/2000/svg" 
+            width="24" 
+            height="24" 
+            viewBox="0 0 32 32"
+        >
+            <path 
+            fill-rule="evenodd"
+            clip-rule="evenodd" 
+            d="M21.164 5.074c-1.984 0-2.548.88-2.548 2.82v3.202h5.277l-.52 5.187h-4.758V32H12.3V16.282H8.04v-5.187h4.262V7.983C12.302 2.75 14.4 0 20.285 0c1.263 0 2.774.1 3.676.226v4.87"
+            />
         </svg>
     </a>
     <a
-        href="https://www.linkedin.com/in/manuelernestogr"
+        href="https://www.linkedin.com/in/mabs98/"
         target="_blank"
         class="mx-3"
         aria-label="Linkedin"
@@ -68,6 +51,33 @@
             ></path>
         </svg>
     </a>
+
+    <a
+        href="https://arc.dev/@miguealbasi?preview=1"
+        target="_blank"
+        class="mx-3"
+        aria-label="Support my work"
+        title="Support my work"
+    >
+    <svg 
+        viewBox="0 0 120 60" width="48" height="24" style="enable-background:new 0 0 120 60;">
+        <path 
+        fill-rule="evenodd"
+        clip-rule="evenodd" 
+        d="M88.9,44.5c-2.4-1.9-4.3-4.1-5.6-6.6c-1.3-2.5-2-5.2-2-7.9c0-2.8,0.6-5.5,1.9-7.9c1.3-2.5,3.2-4.7,5.7-6.5
+        l0.5-0.4l0.2,0.3l1.5,2.1l-0.2,0.2c-2.1,1.9-3.4,3.7-4.3,5.5c-0.8,1.8-1.2,4.1-1.2,6.8c0,2.7,0.4,5,1.3,6.9c0.9,1.8,2.2,3.6,4,5.3
+        l0.4,0.3l-0.2,0.3l-1.5,2.1L88.9,44.5z M99.1,44.5l-0.5,0.4l-1.5-2.1l-0.2-0.3l0.4-0.3c1.8-1.7,3.2-3.4,4-5.3
+        c0.9-1.8,1.3-4.2,1.3-6.9c0-2.6-0.4-4.9-1.2-6.8c-0.8-1.8-2.2-3.6-4.3-5.5l-0.2-0.2l1.5-2.1l0.2-0.3l0.5,0.4
+        c2.5,1.9,4.4,4.1,5.7,6.5c1.3,2.5,1.9,5.2,1.9,7.9c0,2.8-0.7,5.4-2,7.9C103.4,40.4,101.6,42.6,99.1,44.5z M18.3,30
+        c0,2,0.5,3.7,1.6,5c1.1,1.3,2.5,1.9,4.2,1.9c1.8,0,3.3-0.6,4.4-1.9c1.1-1.3,1.7-2.9,1.7-4.9c0-2-0.6-3.6-1.7-4.9
+        c-1.1-1.3-2.6-1.9-4.3-1.9c-1.7,0-3.1,0.6-4.2,1.9C18.9,26.5,18.3,28.1,18.3,30z M29.9,19.4h4.9v21.3h-4.9v-2.2
+        c-2,1.9-4.2,2.8-6.5,2.8c-2.9,0-5.3-1.1-7.3-3.2c-1.9-2.2-2.8-4.9-2.8-8.1c0-3.2,0.9-5.8,2.8-8c1.9-2.1,4.3-3.2,7.1-3.2
+        c2.5,0,4.7,1,6.6,3.1V19.4z M41,19.6h4.9v1.9c0.9-0.9,1.7-1.6,2.4-1.9c2.3-0.8,5.1-0.2,7.4,1l-2,4c-0.9-0.7-2.4-1.1-3.3-1.1
+        c-2.7,0-4.6,2.2-4.6,6.3v11H41V19.6z M74.5,20.4v4.7c-1.5-1.8-4.9-1.8-6.1-1.8c-1.8,0-3.4,0.6-4.6,1.9c-1.2,1.3-1.8,2.9-1.8,4.9
+        c0,2,0.6,3.6,1.8,4.9c1.2,1.3,2.7,1.9,4.5,1.9c1.2,0,4.8-0.4,6.2-1.6v4.4c-2,1-4,1.6-6,1.6c-3.3,0-6-1.1-8.2-3.2
+        c-2.2-2.1-3.3-4.8-3.3-8c0-3.2,1.1-5.9,3.3-8c2.2-2.2,5-3.3,8.2-3.3C70.7,18.8,72.6,19.3,74.5,20.4L74.5,20.4z"/>
+    </svg>
+    </a>    
 
     <a href="/rss.xml" target="_blank" class="mx-3" aria-label="RSS Feed" title="RSS Feed">
         <svg
