--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,20 +12,15 @@ const last_posts = posts.slice(0, 3);
 <BaseLayout sideBarActiveItemID="home">
   <div class="pb-12 mt-5">
     <div class="text-xl py-1">Hey there 👋</div>
-    <div class="text-5xl font-bold">I'm Manuel Ernesto</div>
-    <div class="text-3xl py-3 font-bold">Software Engineer and Entrepreneur</div>
+    <div class="text-5xl font-bold">I'm Miguel Bazán</div>
+    <div class="text-3xl py-3 font-bold">Computer Engineer Student</div>
     <div class="py-2">
       <text class="text-lg">
-        This is <b>Astrofy</b> a free and open-source template for your Personal Portfolio Website built with Astro and TailwindCSS.
-        Create in minutes a website with Blog, CV, Project Section, Store and RSS Feed. I hope you find
-        it useful!
+        I'm almost have 2 years of experiences in large companies as Unilever & BASF. Also, 1 year of experiences in develop industry. In my Social Service Internship I developed a complete ticket system to manage the students entrance to events in my university. 
       </text>
     </div>
     <div class="mt-8">
-      <a class="btn" href="https://twitter.com/manuelernestog" target="_blank"> Let's connect!</a>
-      <a href="https://github.com/manuelernestog/astrofy" target="_blank" class="btn btn-outline ml-5">
-        Get This template
-      </a>
+      <a  class="btn btn-outline" href="https://www.facebook.com/migueAlBaSi98" target="_blank"> Find me on FB!</a>
     </div>
   </div>
 
